--- a/app/src/main/res/layout/qrcode_layout.xml
+++ b/app/src/main/res/layout/qrcode_layout.xml
@@ -8,13 +8,11 @@
 
     <ImageView
         android:id="@+id/qrcode"
-        android:layout_width="90dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="400dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="32dp"
-        android:scaleX="1.5"
-        android:scaleY="1.5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
