--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#F82945E6</color>
     <color name="colorPrimaryDark">#000707</color>
     <color name="colorAccent">#F82945E6</color>
-    <color name="eazifundsblue">#F8081C8D</color>
+    <color name="eazifunds_blue">#F8081C8D</color>
+    <color name="efblue">#28388f</color>
+    <color name="eazifundsgreen">#94c947</color>
 </resources>
