--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/alegreya_sans</item>
         <item>@font/amiko</item>
+        <item>@font/cabin</item>
         <item>@font/krona_one</item>
     </array>
 </resources>
