--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/efblue</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <!-- Base application theme. MaterialComponents -->
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/mb_transparent</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -23,9 +24,46 @@
     </style>
 
     <style name="Password">
-        <item name="android:textColor">#94c947</item>
+        <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">18sp</item>
         <item name="fontFamily">@font/amiko</item>
+    </style>
+
+    <style name="identityInfo">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="cardInfo">
+        <item name="android:textColor">@color/mb_black</item>
+        <item name="android:fontFamily">@font/kredit_front</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <!--Bottom Sheet
+    The BottomSheetDialog is setting a default white background color , this is why the corners are not visible,
+    In order to show them you need to make the background of the dialog transparent-->
+    <style name="BottomSheetDialog" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/bottomSheetStyle</item>
+    </style>
+
+    <style name="bottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:paddingBottom">30dp</item>
+        <item name="android:paddingTop">20dp</item>
+        <item name="android:radius">20dp</item>
+    </style>
+    <!--Bottom Sheet-->
+
+    <!--Bottom Sheet V2-->
+    <style name="AppBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/customCurvedBottomSheet</item>
+    </style>
+
+    <style name="customCurvedBottomSheet" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/rounded_dialogue</item>
+        <item name="android:paddingBottom">30dp</item>
+        <item name="android:paddingTop">20dp</item>
     </style>
 
 </resources>
