--- a/app/src/main/res/layout/custom_credit_card_view.xml
+++ b/app/src/main/res/layout/custom_credit_card_view.xml
@@ -81,4 +81,14 @@
         app:layout_constraintTop_toBottomOf="@+id/debitCardExpDate"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <ImageView
+        android:id="@+id/cardFrontImage"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_credit_card_120" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
