--- a/app/src/main/res/layout/debit_card.xml
+++ b/app/src/main/res/layout/debit_card.xml
@@ -71,12 +71,12 @@
 
         <ImageView
             android:id="@+id/debitCardIssuerImage"
-            tools:srcCompat="@tools:sample/avatars"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="@+id/debitCardExpDate"
-            app:layout_constraintTop_toBottomOf="@+id/debitCardExpDate" />
+            app:layout_constraintTop_toBottomOf="@+id/debitCardExpDate"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <android.widget.Button
             android:id="@+id/showCVV"
@@ -86,6 +86,17 @@
             android:background="@drawable/ic_open_eye_24"
             app:layout_constraintStart_toStartOf="@+id/debitCardCvv"
             app:layout_constraintTop_toBottomOf="@+id/debitCardCvv" />
+
+        <ImageView
+            android:id="@+id/debitCardFrontImage"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_baseline_credit_card_120" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
